--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": "14.x",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
